src/test/ui/rfc-2093-infer-outlives/reference.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
struct Foo<'a, T> { //~ ERROR dustc_outlives
    bar: &'a T,
}

fn main() {}
